--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/mUlam/08.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/mUlam/08.md
@@ -73,7 +73,7 @@ unicode_script: devanagari
 हेमपल्लवविभङ्गसंस्तरानन्वभूत्सुरतमर्दनक्षमान् ॥ ८।२२॥
 
 पद्मनाभचरणाङ्किताश्मसु प्राप्तवत्स्वमृतविप्रुषो नवाः ।  
-मन्दरस्य कटकेषु चावसत्पार्वतीवदनपद्मषट्पदः ॥ ८।२३॥
+मन्दरस्य कटकेषु चावसप्तार्वतीवदनपद्मषट्पदः ॥ ८।२३॥
 
 वारणध्वनितभीतया तया कण्ठसक्तघनबाहुबन्धनः ।  
 एकपिङ्गलगिरौ जगद्गुरुर्निर्विवेश विशदाः शशिप्रभाः ॥ ८।२४॥
@@ -231,7 +231,7 @@ unicode_script: devanagari
 एष चारुमुखि योगतारया युज्यते तरलबिम्बया शशी ।  
 साध्वसादुपगतप्रकम्पया कन्ययेव नवदीक्षया वरः ॥ ८।७३॥
 
-पाकभिन्नशरकाण्डगौरयोरुल्लसत्प्रतिकृतिप्रसन्नयोः ।  
+पाकभिन्नशरकाण्डगौरयोरुल्लसप्त्रतिकृतिप्रसन्नयोः ।  
 रोहतीव तव गण्डलेखयोश्चन्द्रबिम्बनिहिताक्ष्णि चन्द्रिका ॥ ८।७४॥
 
 लोहितार्कमणिभाजनार्पितं कल्पवृक्षमधु बिभ्रती स्वयम् ।  
