--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
@@ -3,20 +3,25 @@ title = "०२"
 
 +++
 
-.  
+<div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga02-1to10.mp3"></div>
+
 
 द्वितीयः सर्गः  
 
+## ब्रह्म-मेलनम्
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्मिन्विप्रकृताः काले तारकेण दिवौकसः ।  
-तुरासाहं पुरोधाय धाम् स्वायंभुवं ययुः ॥ 2.1 ॥  
+तस्मिन् **विप्रकृताः** काले  
+तारकेण दिवौकसः ।  
+तुरा-साहं +++(इन्द्रं)+++ **पुरोधाय**  
+धाम स्वायंभुवं **ययुः** ॥ 2.1 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 तस्मिन्विप्रकृताः काले तारकेण दिवौकसः ।  
-तुरासाहं पुरोधाय धाम् स्वायंभुवं ययुः ॥ 2.1 ॥  
+तुरासाहं पुरोधाय धाम स्वायंभुवं ययुः ॥ 2.1 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -26,35 +31,41 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-तस्मिन्निति ॥ तस्मिन्काले पार्वतीशुश्रूषाकाले तारकेण तारकनाम्ना वज्रणखपुत्रेण केनचिदसुरेण विप्रकृता उपप्लुता दिवमोकः स्थानं योषां ते दिवौकसो देवाः । 'दिवं स्वर्गेऽन्तरिक्षे च' इति विश्वः । द्यौरोक इति पक्षे पृषोदरादित्वात्साधुः । तुरं त्वरितं साहयत्यभिबवतीति तुराषाटा । साहयतेश्चौरादिकात्क्विप् । 'नहिवृतिवृषि-' इत्यादिना पूर्वपदस्य दीर्धः । प्रकृतिग्रहणे प्रातिपदिकस्यापि ग्रहणात् । मुग्धबोधकारस्तु तुराशब्दष्टावन्त इत्याचष्टे । तं तुरासाहं देवेन्द्रम् । अजादिषु साङ्रुपत्वाभावात् । 'सहेः साडः सः' इति षत्वं न भवति । पुरोधाय पुरस्कृत्य । स्वयंभुवो ब्रह्मण इदं स्वायंभुवम् । संज्ञापूर्वकविधेरनित्यत्वात् ओर्गुणः' इति गुणो न । धाम स्थानं ययुः । ब्रह्मलोकं जग्मुरित्यर्थः ॥ 2.1 ॥
+तस्मिन्निति ॥ तस्मिन्काले पार्वतीशुश्रूषाकाले तारकेण तारकनाम्ना वज्रणखपुत्रेण केनचिदसुरेण विप्रकृता उपप्लुता दिवमोकः स्थानं योषां ते दिवौकसो देवाः । 'दिवं स्वर्गेऽन्तरिक्षे च' इति विश्वः । द्यौरोक इति पक्षे पृषोदरादित्वात्साधुः । 
+
+तुरं त्वरितं साहयत्यभिबवतीति तुराषाटा । साहयतेश्चौरादिकात्क्विप् । 'नहिवृतिवृषि-' इत्यादिना पूर्वपदस्य दीर्धः । प्रकृतिग्रहणे प्रातिपदिकस्यापि ग्रहणात् । मुग्धबोधकारस्तु तुराशब्दष्टावन्त इत्याचष्टे । तं **तुरासाहं** देवेन्द्रम् । अजादिषु साङ्रुपत्वाभावात् । 'सहेः साडः सः' इति षत्वं न भवति । पुरोधाय पुरस्कृत्य । स्वयंभुवो ब्रह्मण इदं स्वायंभुवम् । संज्ञापूर्वकविधेरनित्यत्वात् ओर्गुणः' इति गुणो न । धाम स्थानं ययुः । ब्रह्मलोकं जग्मुरित्यर्थः ॥ 2.1 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तेषामाविरभूद्ब्रह्मा परिम्लानमुखश्रियाम् ।  
-सरसां सुत्पपद्मानां प्रातर्दीधितिमानिव ॥ 2.2 ॥  
+तेषाम् **आविर् अभूद्** ब्रह्मा  
+परिम्लान-मुख-श्रियाम् ।  
+सरसां सुप्त-पद्मानां  
+प्रातर् दीधितिमान् इव ॥ 2.2 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 तेषामाविरभूद्ब्रह्मा परिम्लानमुखश्रियाम् ।  
-सरसां सुत्पपद्मानां प्रातर्दीधितिमानिव ॥ 2.2 ॥  
+सरसां सुप्तपद्मानां प्रातर्दीधितिमानिव ॥ 2.2 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-परिम्लानमुखश्रियां तेषां ब्रह्मा सुत्पपद्मनां सरसां प्रातः दीधितिमान् इव आविरभूत् ।  
+परिम्लानमुखश्रियां तेषां ब्रह्मा सुप्तपद्मनां सरसां प्रातः दीधितिमान् इव आविरभूत् ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-तेषामिति । परिम्लाना परिक्षीणा मुखश्रीर्मुखकान्तिर्येषां तथोक्तानां तेषां देवानां ब्रह्मा सुत्पपद्मानां मुकुलितारविन्दानां सरसां प्रातर्दीधितमान्सूर्यं इवाविरभूत् । प्रकाशोऽभूदित्यर्थः । 'प्रकाशे प्रादुराविः स्यात्' इत्यमरः । सूर्योपमानेन तेषां म्लानिहरणत्वं सूचितम् । अत्रोपमाऽलङ्कारः । तल्लक्षणं तु- 'स्वतः सेद्धेन भिन्नेन संमतेन च धर्मतः । साम्यमन्येन वर्ण्यस्य वाच्यं चैकपदोपमा ॥' इति ॥ 2.2 ॥
+तेषामिति । परिम्लाना परिक्षीणा मुखश्रीर्मुखकान्तिर्येषां तथोक्तानां तेषां देवानां ब्रह्मा सुप्तपद्मानां मुकुलितारविन्दानां सरसां प्रातर्दीधितमान्सूर्यं इवाविरभूत् । प्रकाशोऽभूदित्यर्थः । 'प्रकाशे प्रादुराविः स्यात्' इत्यमरः । सूर्योपमानेन तेषां म्लानिहरणत्वं सूचितम् । अत्रोपमाऽलङ्कारः । तल्लक्षणं तु- 'स्वतः सेद्धेन भिन्नेन संमतेन च धर्मतः । साम्यमन्येन वर्ण्यस्य वाच्यं चैकपदोपमा ॥' इति ॥ 2.2 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथ सर्वस्य धातारं ते सर्वे सर्वतोमुखम् ।  
-वागीशं वाग्भिरर्थ्याभिः प्रणिपत्योपतस्थिरे ॥ 2.3 ॥  
+अथ सर्वस्य धातारं  
+ते सर्वे सर्वतोमुखम् ।  
+वागीशं वाग्भिर् अर्थ्याभिः  
+**प्रणिपत्योपतस्थिरे** ॥ 2.3 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -71,18 +82,22 @@ title = "०२"
 <details><summary>मल्लिनाथः</summary>
 
 अथेति । अथाविर्भावानन्तरं सर्वे ते देवाः सर्वतः समन्ततो मुखानि यस्य तं सर्वतोमुखम् । चतुर्मुखमित्यर्थः वाचां विद्यानां ईशं सर्वस्य जगतो धातारं स्त्रष्टारं ब्रह्माणं प्रणिपत्य नमस्कृत्य । अर्थादनपेताभिरर्थ्याभिः । अर्थयुक्ताभिरित्यर्थः। 'धर्मपथ्यर्थन्यायादनपेते' इति यत्प्रत्ययः । वाग्भिरुपतस्थिरे । तुष्टुवुरित्यर्थः । 'उपाद्देवपूजासंगतिकरणमित्रकरणपथिष्विति वक्तव्यम्'। इत्यात्मनेपदम् ॥ 2.3 ॥
+
+स्तुतिप्रकारमाह 'नमः' इत्यादिभिर्द्वादशभिः श्लेकैः -
 </details>
+
+## स्तुतिः
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स्तुतिप्रकारमाह 'नमः' इत्यादिभिर्द्वादशभिः श्लेकैः -  
-नमस्त्रिमुर्तये तुभ्यं प्राक्सृष्टेः केवलात्मने ।  
-गुणत्रयविभागाय पश्चाद्भेदमुपेयुषे ॥ 2.4 ॥  
+नमस् त्रिमुर्तये तुभ्यं  
+प्राक्-सृष्टेः **केवलात्मने** ।  
+गुण-त्रय-विभागाय  
+पश्चाद् **भेदम् उपेयुषे** ॥ 2.4 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-स्तुतिप्रकारमाह 'नमः' इत्यादिभिर्द्वादशभिः श्लेकैः -  
 नमस्त्रिमुर्तये तुभ्यं प्राक्सृष्टेः केवलात्मने ।  
 गुणत्रयविभागाय पश्चाद्भेदमुपेयुषे ॥ 2.4 ॥  
 </details>
@@ -99,14 +114,16 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-यदमोघमपामन्तरुप्तं बीजमज त्वया ।  
-अतश्चराचरं विश्वं प्रभवस्तस्य गीयसं ॥ 2.5 ॥  
+यद् अमोघम् अपाम् अन्तर्  
+उप्तं बीजम् अज त्वया ।  
+अतश् चराचरं विश्वं,  
+प्रभवस् तस्य **गीयसे** ॥ 2.5 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 यदमोघमपामन्तरुप्तं बीजमज त्वया ।  
-अतश्चराचरं विश्वं प्रभवस्तस्य गीयसं ॥ 2.5 ॥  
+अतश्चराचरं विश्वं प्रभवस्तस्य गीयसे ॥ 2.5 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -122,8 +139,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तिसृभिस्त्वमवस्थाभिर्महिमानमुदीरयन् ।  
-प्रलयस्थितिसर्गाणामेकः कारणतां गतः ॥ 2.6 ॥  
+तिसृभिस् त्वम् अवस्थाभिर्  
+महिमानम् **उदीरयन्** ।  
+प्रलय-स्थिति-सर्गाणाम्  
+एकः **कारणतां गतः** ॥ 2.6 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -140,18 +159,20 @@ title = "०२"
 <details><summary>मल्लिनाथः</summary>
 
 तिसृभिरिति ॥ एकः सृष्टेः प्राक्केवलस्त्वं तिसृभिरवस्थाभिस्त्रैगुण्यमयीभिर्हरिहरब्रह्मस्वरुपाभिर्महिमानं निजशक्तिमुदीरयन्जृम्भयन्प्रलयस्थितिसर्गाणामन्तस्थित्युत्पत्तीनां कारणतां गतः । इदं पश्चाद्भेदमुपेयुषे (2/4) इत्यस्य विवरणमतो न गतार्थत्वदोषः ॥ 2.6 ॥
+
+भूतसृष्टिकर्तृत्वमुक्त्वा मिथुनसृष्ट्यर्थ मूर्तिमतो ब्रह्मणो भेदमाह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-भूतसृष्टिकर्तृत्वमुक्त्वा मिथुनसृष्ट्यर्थ मूर्तिमतो ब्रह्मणो भेदमाह-  
-स्त्रीपुंसावात्मभागौ ते भिन्नमूर्तेः सिसृक्षया ।  
-प्रसूतिभाजः सर्गस्य तावेव पितरौ स्मृतौ ॥ 2.7 ॥  
+**स्त्री-पुंसाव् आत्मभागौ** ते  
+भिन्न-मूर्तेः सिसृक्षया ।  
+प्रसूति-भाजः सर्गस्य  
+ताव् एव **पितरौ स्मृतौ** ॥ 2.7 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-भूतसृष्टिकर्तृत्वमुक्त्वा मिथुनसृष्ट्यर्थ मूर्तिमतो ब्रह्मणो भेदमाह-  
 स्त्रीपुंसावात्मभागौ ते भिन्नमूर्तेः सिसृक्षया ।  
 प्रसूतिभाजः सर्गस्य तावेव पितरौ स्मृतौ ॥ 2.7 ॥  
 </details>
@@ -168,8 +189,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स्वकालपरिमाणेन व्यस्तरात्रिंदिवस्य ते ।  
-यौ तु स्वप्नावबोधौ तौ भूतानां प्रलयोदयौ ॥ 2.8 ॥  
+स्व-काल-परिमाणेन  
+व्यस्त-रात्रिं-दिवस्य ते ।  
+यौ तु **स्वप्नावबोधौ** तौ  
+भूतानां **प्रलयोदयौ** ॥ 2.8 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -190,8 +213,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-जगद्योनिरयोनिस्त्वं जगदन्तो निरन्तकः ।  
-जगदादिरनादिस्त्वं जगदीशो निरीश्वरः ॥ 2.9 ॥  
+जगद्-योनिर् **अयोनिस्** त्वं  
+जगद्-अन्तो **निरन्तकः** ।  
+जगद्-आदिर् **अनादिस्** त्वं  
+जगदीशो **निरीश्वरः** ॥ 2.9 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -208,18 +233,20 @@ title = "०२"
 <details><summary>मल्लिनाथः</summary>
 
 -जगदिति । हे भगवन्, त्वं जगद्योविर्जगत्कारणं स्वयमयोनिरनादित्वादकारणकस्त्वम् । अन्तयतीत्यन्तः । पचाद्यच् । चगतोऽन्तर्जगत्संहर्ता स्वयं निरन्तको नित्यत्वादन्तरहितः । त्वं जगतामादिर्जगदादिः । सृष्टे प्रागपि सन्नित्यर्थः । अत एव त्वमनादिरादिरहितः । त्वं जगतामीशो नियन्ता स्वयं निरीश्वरः । अनियम्य इत्यर्थः । 'यतो वा इमानि भूतानि जायन्ते' इत्यादि श्रुतिरेवात्र प्रमाणम् । अत्रायोनिरित्यादौ नञ्तत्पुरुषाश्रयणे विरोधः । बहुव्रीहिणा तु तत्परिहार इति विरोधाभासालंकारः । यथाहुः- 'विरोधाभासत्वे विरोधः' इति ॥ 2.9 ॥
+
+तव तु न प्रपञ्चस्येव जन्मतिरोधानज्ञानेषु परापेक्षेत्याह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तव तु न प्रपञ्चस्येव जन्मतिरोधानज्ञानेषु परापेक्षेत्याह-  
-आत्मानमात्मना वेत्सि सृजस्यात्मानमात्मना ।  
-आत्मना कृतिना च त्वमात्मन्येव प्रलीयसे ॥ 2.10 ॥  
+आत्मानम् आत्मना **वेत्सि**  
+**सृजस्य्** आत्मानम् आत्मना ।  
+आत्मना कृतिना च त्वम्  
+आत्मन्य् एव **प्रलीयसे** ॥ 2.10 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-तव तु न प्रपञ्चस्येव जन्मतिरोधानज्ञानेषु परापेक्षेत्याह-  
 आत्मानमात्मना वेत्सि सृजस्यात्मानमात्मना ।  
 आत्मना कृतिना च त्वमात्मन्येव प्रलीयसे ॥ 2.10 ॥  
 </details>
@@ -235,15 +262,19 @@ title = "०२"
 </details>
 
 
+<div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga02-11to25.mp3"></div>
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-द्रवा संघातकठिनः, स्थूलः सूक्ष्मो लघुर्गुरुः ।  
-व्यक्तो व्यक्तेतरश्चासि प्राकाम्यं ते विभूतिषु ॥ 2.11 ॥  
+द्रवः, संघात-कठिनः,  
+स्थूलः, सूक्ष्मो, लघुर्, गुरुः ।  
+व्यक्तो, व्यक्तेतरश् चासि  
+**प्राकाम्यं** ते विभूतिषु ॥ 2.11 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-द्रवा संघातकठिनः, स्थूलः सूक्ष्मो लघुर्गुरुः ।  
+द्रवः संघातकठिनः, स्थूलः सूक्ष्मो लघुर्गुरुः ।  
 व्यक्तो व्यक्तेतरश्चासि प्राकाम्यं ते विभूतिषु ॥ 2.11 ॥  
 </details>
 
@@ -259,13 +290,15 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-उद्धातः प्रणवो यासां न्यायैस्त्रिभिरुदीराणम् ।  
-कर्म यज्ञः फलं स्वर्गस्तासां त्वं प्रभवो गिराम् ॥ 2.12 ॥  
+उद्घातः प्रणवो यासां +++(श्रुतीनां)+++,  
+न्यायैस् त्रिभिर् +++(उदात्तानुदात्तस्वरितैः)+++ उदीरणम् ।  
+कर्म यज्ञः, फलं स्वर्गस्,  
+तासां त्वं **प्रभवो गिराम्** ॥ 2.12 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-उद्धातः प्रणवो यासां न्यायैस्त्रिभिरुदीराणम् ।  
+उद्घातः प्रणवो यासां न्यायैस्त्रिभिरुदीरणम् ।  
 कर्म यज्ञः फलं स्वर्गस्तासां त्वं प्रभवो गिराम् ॥ 2.12 ॥  
 </details>
 
@@ -276,19 +309,28 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-उद्घात इति ॥ हे भगवन्, यासां गिरां वाचामुद्घात उपक्रमः प्रणव ओंकारात्मकः । 'ओंकारप्रणवौ समौ' इति । 'स्यादभ्यादानमुद्घात आरम्भः' इति चामरः । इदमुपसंहारस्याप्युपलक्षणम् । 'ब्रह्मणः प्रणवं कुर्यादादावन्ते च सर्वतः । दहत्येनः कृतं पूर्वं परस्ताच्च विशेषतः ॥' इति निरुक्तपरिशिष्टयोर्यास्कः । नोयन्त एभिरर्थविशेषा इति न्यायाः स्वराः । उक्तं च- स्वरविशेषादर्थप्रतिपत्तिः' । 'यथेन्द्रशत्रुः स्वरतोऽपराधात्' इति । यासां गिरां त्रिभिर्न्यायैरुदात्तानुदात्तस्वरितैः स्वरैरुदीरणमुच्चारणम् । यासां कर्म, प्रतिपाद्यमित्यर्थः । यज्ञो ज्योतिष्टोमादिः । न तु चैत्यवन्दनादिरिति भावः । फलं स्वर्गः । कर्मद्वारेति शेषः । कर्मस्वर्गौ ब्रह्मापवर्गयोरप्युपलक्षणे । त्वं तासां गिरां वेदानामित्यर्थः । प्रभवत्यस्मादिति प्रभवः कारणम् । प्रणेता स्मर्ता वा मतभेदेन ॥ 2.12 ॥
+उद्घात इति ॥ हे भगवन्, **यासां गिरां** वाचामुद्घात **उपक्रमः प्रणव** ओंकारात्मकः । 'ओंकारप्रणवौ समौ' इति । 'स्यादभ्यादानमुद्घात आरम्भः' इति चामरः । इदमुपसंहारस्याप्युपलक्षणम् । 
+
+> 'ब्रह्मणः प्रणवं कुर्यादादावन्ते च सर्वतः ।  
+> दहत्येनः कृतं पूर्वं परस्ताच्च विशेषतः ॥' 
+
+इति निरुक्तपरिशिष्टयोर्यास्कः । नोयन्त एभिरर्थविशेषा इति न्यायाः स्वराः । उक्तं च- 'स्वरविशेषादर्थप्रतिपत्तिः' । 'यथेन्द्रशत्रुः स्वरतोऽपराधात्' इति । 
+
+**यासां गिरां त्रिभिर् न्यायैर्** उदात्तानुदात्तस्वरितैः स्वरैरुदीरणमुच्चारणम् । यासां कर्म, प्रतिपाद्यमित्यर्थः । यज्ञो ज्योतिष्टोमादिः । न तु चैत्यवन्दनादिरिति भावः । फलं स्वर्गः । कर्मद्वारेति शेषः । कर्मस्वर्गौ ब्रह्मापवर्गयोरप्युपलक्षणे । त्वं तासां गिरां वेदानामित्यर्थः । प्रभवत्यस्मादिति प्रभवः कारणम् । प्रणेता स्मर्ता वा मतभेदेन ॥ 2.12 ॥
+
+सांख्यामतेन स्तुवन्ति-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सांख्यामतेन स्तुबन्ति-  
-त्वामामनन्ति प्रकृतिं पुरुषार्थप्रवर्तिनीम् ।  
-तद्दर्शिनमुदासीनं त्वामेव पुरुषं विदुः ॥ 2.13 ॥  
+त्वाम् **आमनन्ति प्रकृतिं**  
+पुरुषार्थ-प्रवर्तिनीम् ।  
+तद्-दर्शिनम् उदासीनं  
+त्वाम् एव **पुरुषं विदुः** ॥ 2.13 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-सांख्यामतेन स्तुबन्ति-  
 त्वामामनन्ति प्रकृतिं पुरुषार्थप्रवर्तिनीम् ।  
 तद्दर्शिनमुदासीनं त्वामेव पुरुषं विदुः ॥ 2.13 ॥  
 </details>
@@ -305,8 +347,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-त्वं पितृणामपि पिता, देवानामपि देवता ।  
-परतोऽपि परश्चासि, विधाता वेधसामपि ॥ 2.14 ॥  
+त्वं पितृणाम् अपि **पिता**,  
+देवानाम् अपि **देवता** ।  
+परतोऽपि **परश्** चासि,  
+**विधाता** वेधसाम्+++(←विध्)+++ अपि ॥ 2.14 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -322,13 +366,15 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-त्वमिति ॥ हे भगवन्, त्वं पितॄणामाग्निष्वात्तादीनामपि पिता । तेषामपि तर्पणीय इत्यर्थः । परतोऽपि परश्चासि । सर्वोत्तरीऽसीत्यर्थः । 'इन्द्रियोभ्यः परा ह्यर्था अर्थेभ्यश्च परं मनः । मनसश्च परा बुद्धिर्बुद्धेरात्मा महास्ततः ।महतः परमव्यक्तात्पुरुषः परः । पुरुषान्न परं किंचित्सा काष्ठा सा परा गतिः ॥' इति सर्वोत्तरत्वाभिधानात् । वेधसां दक्षादीनामपि विधाता स्त्रष्टासि ॥ 2.14 ॥
+त्वमिति ॥ हे भगवन्, त्वं पितॄणामाग्निष्वात्तादीनामपि पिता । तेषामपि तर्पणीय इत्यर्थः । परतोऽपि परश्चासि । सर्वोत्तरीऽसीत्यर्थः । 'इन्द्रियोभ्यः परा ह्यर्था अर्थेभ्यश्च परं मनः । मनसश्च परा बुद्धिर्बुद्धेरात्मा महास्ततः ।महतः परमव्यक्तात्पुरुषः परः । पुरुषान्न परं किंचित्सा काष्ठा सा परा गतिः ॥' इति सर्वोत्तरत्वाभिधानात् । **वेधसां** दक्षादीनामपि विधाता स्त्रष्टासि ॥ 2.14 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-त्वमेव हव्यं होता च, भोज्यं भोक्ता च शाश्वतः ।  
-वेद्यं च वेदिता चासि, ध्याता ध्येयं च यत्परम् ॥ 2.15 ॥  
+त्वम् एव हव्यं होता च,  
+भोज्यं भोक्ता च शाश्वतः ।  
+वेद्यं च वेदिता चासि,  
+ध्याता ध्येयं च यत्परम् ॥ 2.15 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -347,10 +393,13 @@ title = "०२"
 त्वमेवेति । शश्वत्सिद्धः शाश्वतः । शैषिकोऽण्प्रत्ययः । यद्यपि 'कालाट्ठञ्' इति ठञपवादः । अत एव सूत्रकारस्यापि प्रयोगः- 'येषां च विरोधः शाश्वतिकः' इति । तथापि प्रयोगवशात्साधुरिति वामन इति । शाश्वतः प्रयुक्तः शाश्वतस्त्वमेव । हूयत इति हव्यं हविराज्यादिकम् । जुहोतीति होता यजमानश्चासि । भोज्यमभ्यवहार्यमन्नम् । 'भोज्यं भक्ष्ये' इति निपातनात्कुत्वाभावः । भोक्तान्नादश्चासि । वेद्यं साक्षात्कार्य वस्तुवेदिता साक्षात्कर्ता चासि । ध्याता स्मर्ता च । यत्परं वस्तु ध्येयं तच्चासि । साक्षात्कर्ता चासि । ध्याता स्मर्ता च । यत्परं वस्तु ध्येयं तच्चासि । साक्षात्कारसाधनभूतप्रत्ययविशेषप्रवाहो ध्यानम् ॥ 2.15 ॥
 </details>
 
+## कुशलप्रश्नः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इति तेभ्यः स्तुतीः श्रुत्वा यथार्था हृदयंगमाः ।  
-प्रसादाभिमुखो वेधाः प्रत्युवाच दिवौकसः ॥ 2.16 ॥  
+इति तेभ्यः स्तुतीः श्रुत्वा  
+यथार्था हृदयं-गमाः ।  
+प्रसादाभिमुखो वेधाः  
+**प्रत्युवाच** दिवौकसः ॥ 2.16 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -371,8 +420,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-पुराणस्य कवेस्तस्य चतुर्मुखसमीरिता ।  
-प्रवृत्तिरासीच्छब्दानां चरितार्था चतुष्टयी ॥ 2.17 ॥  
+पुराणस्य कवेस् तस्य  
+चतुर्-मुख-समीरिता ।  
+**प्रवृत्तिर्** आसीच् **छब्दानां**  
+चरितार्था चतुष्टयी +++(द्रव्य-गुण-क्रिया-जाति-भेदेन? पुरुषार्थभेदेन?प्र्-ऊ)+++ ॥ 2.17 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -388,37 +439,43 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-पुराणस्येति ॥ द्रव्यगुणक्रियाजातिभेदेन चत्वारोऽवयवा यस्या इति चतुष्टयो चतुर्विधा । 'संख्यामा अवयवे तयप्' इति तयप् । 'टिङ्ढाणञ्द्वयसच्-' इत्यादिना ङीप् । शब्दानां प्रवृत्तिर्वैखरोप्रमुखा वाग्वृत्तिः । उक्तं च- 'वैखरी शब्दनिष्पत्तिर्मध्यमा श्रुतिगोचरा । द्योतितार्था च पश्यन्ती सूक्ष्मा वागनपायिनी ॥' इति । पुराणास्य पुरातनस्य । पृषोदरादित्वात्साधुः । कवेः कवयितुस्तस्य ब्रह्मणश्चतुर्भिर्मुखैः समीरिता सती । 'तद्धितार्थ-' इत्यादिनोत्तरपदसमासः । समाहारे चतुर्मुखीति स्यात् । चरितार्थान्वर्थासीत् । चतुर्मुखोच्चारणाच्चातुर्विध्यं सफलमासोदित्यर्थः ॥ 2.17 ॥
+पुराणस्येति ॥ द्रव्य-गुण-क्रिया-जाति-भेदेन चत्वारोऽवयवा यस्या इति **चतुष्टयी** चतुर्विधा । 'संख्यामा अवयवे तयप्' इति तयप् । 'टिङ्ढाणञ्द्वयसच्-' इत्यादिना ङीप् । शब्दानां प्रवृत्तिर्वैखरोप्रमुखा वाग्वृत्तिः । उक्तं च- 'वैखरी शब्दनिष्पत्तिर्मध्यमा श्रुतिगोचरा । द्योतितार्था च पश्यन्ती सूक्ष्मा वागनपायिनी ॥' इति । पुराणास्य पुरातनस्य । पृषोदरादित्वात् साधुः । कवेः कवयितुस् तस्य ब्रह्मणश्चतुर्भिर्मुखैः समीरिता सती । 'तद्धितार्थ-' इत्यादिनोत्तरपदसमासः । समाहारे चतुर्मुखीति स्यात् । चरितार्थान्वर्थासीत् । चतुर्मुखोच्चारणाच् चातुर्विध्यं सफलमासीदित्यर्थः ॥ 2.17 ॥
+
+भगवानाह-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-भगवानाह-  
-स्वगतं स्वानधीकारान्प्रभावैरवलम्ब्य वः ।  
-युगपद्युगबाहुभ्यः प्राप्तेभ्यः प्राज्यविक्रमाः ॥ 2.18 ॥  
+**स्वागतं** स्वान् अधीकारान्  
+प्रभावैर् अवलम्ब्य **वः** ।  
+युगपद् युग+++(→दीर्घ, सम)+++-बाहुभ्यः  
+**प्राप्तेभ्यः** प्राज्य-विक्रमाः ॥ 2.18 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-भगवानाह-  
-स्वगतं स्वानधीकारान्प्रभावैरवलम्ब्य वः ।  
+स्वागतं स्वानधीकारान्प्रभावैरवलम्ब्य वः ।  
 युगपद्युगबाहुभ्यः प्राप्तेभ्यः प्राज्यविक्रमाः ॥ 2.18 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-हे प्राज्यविक्रनाः ! स्वानृ अधिकारान् प्रभावैः अवलम्ब्य युगपत् प्राप्तेभ्यः युगबाहुभ्यो वः स्वागतम् ॥ 2.18 ॥  
+हे प्राज्यविक्रनाः ! स्वान् अधिकारान् प्रभावैः अवलम्ब्य युगपत् प्राप्तेभ्यः युगबाहुभ्यो वः स्वागतम् ॥ 2.18 ॥  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-स्वागतमिति ॥ हे प्राज्यविक्रमाः प्रभूतपराक्रमा देवाः । 'प्राज्यं भूरिप्रभूतं च' इति यादवः । स्वान्स्वकीयानधिकारान्नियोगान् । 'उपसर्गस्य घञि-' इति वा दीर्घः । प्रभावैः सामर्थ्यैरवलम्ब्यास्थाय । यथाधिकारं स्थित्वापीत्यर्थः । युगपत्समकालं प्राप्तेभ्यः । युगपत्प्राप्त्या महत्कार्यमनुमीयत इति भावः । युगबाहुभ्यः । युगबाहुभ्यः । दीर्घबाहुभ्य इत्यर्थः । अजानुबाहुत्वं भाग्यलक्षणम् । वो युष्मभ्यम् ।'बहुवचनस्य वस्नसौ' इति वसादेशः । 'कर्मणा यमभिप्रैति-' इत्यत्र कर्मपदेन क्रियाग्रहणात्संप्रदानत्वम् । स्वागतं शोभनागमनम् । काकुरत्रानुसंवेया ॥ 2.18 ॥
+स्वागतमिति ॥ हे प्राज्यविक्रमाः प्रभूतपराक्रमा देवाः । 'प्राज्यं भूरिप्रभूतं च' इति यादवः । स्वान्स्वकीयानधिकारान्नियोगान् । 'उपसर्गस्य घञि-' इति वा दीर्घः । प्रभावैः सामर्थ्यैरवलम्ब्यास्थाय । यथाधिकारं स्थित्वापीत्यर्थः । युगपत्समकालं प्राप्तेभ्यः । युगपत्प्राप्त्या महत्कार्यमनुमीयत इति भावः । 
+
+**युगबाहुभ्यः** । दीर्घ-बाहुभ्य इत्यर्थः । अजानुबाहुत्वं भाग्यलक्षणम् । वो युष्मभ्यम् ।'बहुवचनस्य वस्नसौ' इति वसादेशः । 'कर्मणा यमभिप्रैति-' इत्यत्र कर्मपदेन क्रियाग्रहणात्संप्रदानत्वम् । स्वागतं शोभनागमनम् । काकुरत्रानुसंवेया ॥ 2.18 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-किमिदं द्युतिमात्मीयां न बिभ्रति यथा पुरा ।  
-हिमक्लिष्टप्रकाशानि ज्योतींषीव मुखानि वः ॥ 2.19 ॥  
+किम् इदं **द्युतिम्** आत्मीयां  
+**न बिभ्रति** यथा पुरा ।  
+हिम-क्लिष्ट-प्रकाशानि  
+ज्योतींषीव मुखानि वः ॥ 2.19 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -435,18 +492,20 @@ title = "०२"
 <details><summary>मल्लिनाथः</summary>
 
 किमिति ॥ 'वत्साः' इत्युत्तरश्लोकीय (4/18) संबोधनमत्राप्यनुष़ञ्जनीयम् । हे वत्साः पुत्रकाः, हिमेन नीहारेण क्लिष्टप्रका शानि मन्दप्रभाणि ज्योतींषि नक्षत्राणीव ।'दीत्पिताराहुताशेषु ज्योतिः' इति शाश्वतः । वो युष्माकं मुखानि पुरा यथा पूर्वमिवात्मीयां द्युतिं न बिभ्रति । इदम् किम् । किंनिबन्धनमित्यर्थः । किमिदमित्यनेन वाक्यार्थः परामृश्यते ॥ 2.19 ॥
+
+उक्तमेव प्रपञ्चयति सप्तभिः श्लोकैः-
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-उक्तमेव प्रपञ्चयति सत्पभिः श्लोकैः-  
-प्रशमादर्चिषामेतदनुद्गीर्णसुरायुधम् ।  
-वृत्रस्य हन्तुः कुलिशं कुण्ठिताश्रीव लक्ष्यते ॥ 2.20 ॥  
+प्रशमाद् अर्चिषाम् एतद्  
+अनुद्गीर्ण-सुरायुधम् ।  
+वृत्रस्य हन्तुः कुलिशं  
+कुण्ठिताश्रीव लक्ष्यते ॥ 2.20 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-उक्तमेव प्रपञ्चयति सत्पभिः श्लोकैः-  
 प्रशमादर्चिषामेतदनुद्गीर्णसुरायुधम् ।  
 वृत्रस्य हन्तुः कुलिशं कुण्ठिताश्रीव लक्ष्यते ॥ 2.20 ॥  
 </details>
@@ -568,7 +627,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-पर्याकुलेति ॥ मरुतां वायूनाम् । सत्पसत्पानामिति शेषः । पर्याकुलत्वात्स्खलितगतित्वाद्धेतोर्वेगस्य भङ्गोऽम्भसां जलानां प्रतीपगमनात् । उत्तानावरोहादित्यर्थः । ओघस्य संरोधः प्रवाहप्रतिबन्ध हवानुमीयते ॥ 2.25 ॥
+पर्याकुलेति ॥ मरुतां वायूनाम् । सप्तसप्तानामिति शेषः । पर्याकुलत्वात्स्खलितगतित्वाद्धेतोर्वेगस्य भङ्गोऽम्भसां जलानां प्रतीपगमनात् । उत्तानावरोहादित्यर्थः । ओघस्य संरोधः प्रवाहप्रतिबन्ध हवानुमीयते ॥ 2.25 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -939,12 +998,12 @@ title = "०२"
 
 <details><summary>अन्वयः</summary>
 
-हि स संसुत्पः (सन्) श्वाससाधारणाऽनिलैः बाष्पसीकरवर्षिभिः सुरवन्दीनां चामरैः वीज्यते ।  
+हि स संसुप्तः (सन्) श्वाससाधारणाऽनिलैः बाष्पसीकरवर्षिभिः सुरवन्दीनां चामरैः वीज्यते ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-वीज्यते इति ॥ हि यस्मात्कारणत्स तारकः संसुत्पः सन् । श्वाससाधारणो निश्वाससमानोऽनिलो योषां तैः ततोऽप्याधिक्ये निद्राभङ्गभयादिति भावः । वाष्पशीकरवर्षिभिः । तासां स्त्रीणां रोदनस्यायमवसर इति भावः । सुरवन्दीनां सुरप्रग्रहस्त्रीणां संबन्धिभिः । 'प्रग्रहापग्रहौ वन्द्याम्' इत्यमरः । चामरैर्वीज्यते ॥ 2.42 ॥
+वीज्यते इति ॥ हि यस्मात्कारणत्स तारकः संसुप्तः सन् । श्वाससाधारणो निश्वाससमानोऽनिलो योषां तैः ततोऽप्याधिक्ये निद्राभङ्गभयादिति भावः । वाष्पशीकरवर्षिभिः । तासां स्त्रीणां रोदनस्यायमवसर इति भावः । सुरवन्दीनां सुरप्रग्रहस्त्रीणां संबन्धिभिः । 'प्रग्रहापग्रहौ वन्द्याम्' इत्यमरः । चामरैर्वीज्यते ॥ 2.42 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
