--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
@@ -232,7 +232,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-तवेतिस ॥ किं बहुना, तव प्रसादादनुग्रहात्कुसुमायुधोऽप्यतिदुर्बलास्त्रोऽप्यहमेकं मधुं वसन्तमेव सहायं लब्ध्वा पिनाकः पाणौ यस्य स पिनाकपाणिः । 'प्रहरणार्थेभ्यः परे निष्ठासत्पम्यौ' । हरस्यापि । हरः पिनाकी चेत्यतिदारुण इति भावः । धैर्यच्युतिं धैर्यरानिं कुर्याम् । कर्तु शक्नुयामित्यर्थः । 'शकि लिङ् च' इति शक्यार्थे लिङ् । अन्ये धन्विनो धनुर्भृते मम के । न केऽपीत्यर्थः । किंशब्दः कुत्सायाम् । 'कुत्साप्रश्नवितर्केषु क्षेपे किंशब्द इष्यते' इति शाश्वतः ॥ 3.10 ॥
+तवेतिस ॥ किं बहुना, तव प्रसादादनुग्रहात्कुसुमायुधोऽप्यतिदुर्बलास्त्रोऽप्यहमेकं मधुं वसन्तमेव सहायं लब्ध्वा पिनाकः पाणौ यस्य स पिनाकपाणिः । 'प्रहरणार्थेभ्यः परे निष्ठासप्तम्यौ' । हरस्यापि । हरः पिनाकी चेत्यतिदारुण इति भावः । धैर्यच्युतिं धैर्यरानिं कुर्याम् । कर्तु शक्नुयामित्यर्थः । 'शकि लिङ् च' इति शक्यार्थे लिङ् । अन्ये धन्विनो धनुर्भृते मम के । न केऽपीत्यर्थः । किंशब्दः कुत्सायाम् । 'कुत्साप्रश्नवितर्केषु क्षेपे किंशब्द इष्यते' इति शाश्वतः ॥ 3.10 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -370,7 +370,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-तस्मा इति ॥ यतात्मने नियतचित्ताय तस्मै भवाय । 'रुच्यर्थानां प्रीयमाणः' इति संप्रदानत्वाच्चतुर्थि । प्रयतां हिमाद्रेस्तनूजां पार्वतीं रोचयितुं यतस्व । भवितव्यं चात्र पार्वत्यैवेत्याह-योषित्सु स्त्रीषु मध्ये । 'यतश्च निर्धारणम्' इति सत्पमी । क्षमा शक्ता तस्य हरस्य वीर्यं रेतस्तस्य निषेकः क्षरणं तस्य भूमिः क्षेत्रं सा पार्वत्येवेत्यात्मभुवा ब्रह्मणोपदिष्टम् । 'उभे एव क्षमे वोढुम्' (2.60) इत्यादिनोक्तमित्यर्थः ॥ 3.16 ॥
+तस्मा इति ॥ यतात्मने नियतचित्ताय तस्मै भवाय । 'रुच्यर्थानां प्रीयमाणः' इति संप्रदानत्वाच्चतुर्थि । प्रयतां हिमाद्रेस्तनूजां पार्वतीं रोचयितुं यतस्व । भवितव्यं चात्र पार्वत्यैवेत्याह-योषित्सु स्त्रीषु मध्ये । 'यतश्च निर्धारणम्' इति सप्तमी । क्षमा शक्ता तस्य हरस्य वीर्यं रेतस्तस्य निषेकः क्षरणं तस्य भूमिः क्षेत्रं सा पार्वत्येवेत्यात्मभुवा ब्रह्मणोपदिष्टम् । 'उभे एव क्षमे वोढुम्' (2.60) इत्यादिनोक्तमित्यर्थः ॥ 3.16 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
