--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
@@ -277,23 +277,23 @@ title = "०६"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तद्दर्शनादभूच्छंभो र्भूयान्दारार्थमादरः ।  
-क्रियाणां खलु धर्म्याणां सत्पत्न्यो मूलकारणम् ॥ 6.13 ॥  
+क्रियाणां खलु धर्म्याणां सप्तत्न्यो मूलकारणम् ॥ 6.13 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 तद्दर्शनादभूच्छंभो र्भूयान्दारार्थमादरः ।  
-क्रियाणां खलु धर्म्याणां सत्पत्न्यो मूलकारणम् ॥ 6.13 ॥  
+क्रियाणां खलु धर्म्याणां सप्तत्न्यो मूलकारणम् ॥ 6.13 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-तद्दर्शनात् शम्भोः दाराऽर्थमादरः भृयान् अभूत्, (यतः) धर्म्याणां क्रियाणां सत्पत्न्यो मूलकारणम् ।  
+तद्दर्शनात् शम्भोः दाराऽर्थमादरः भृयान् अभूत्, (यतः) धर्म्याणां क्रियाणां सप्तत्न्यो मूलकारणम् ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-तदिति । तद्दर्शनादरुन्धतीदर्शनाच्छंभोर्दारार्यं परिग्रहार्थमादरो भूयान्बहुतरोऽभूत् । ननु दाराः कुत्रोपयुज्यन्त इत्यत्राह--धर्म्याणां दर्णादनपेतानाम् । 'धर्मपथ्यर्थन्यायादनपेते' इति यत्प्रत्ययः । क्रियामाणानामिज्यादीनां सत्यः पतिब्रताः पत्नयः सत्पत्न्यः । 'पत्युर्नो यज्ञसंयोगे' इति ङीप् । नकारश्च । मूलकारणं खलु ॥ 6.13 ॥
+तदिति । तद्दर्शनादरुन्धतीदर्शनाच्छंभोर्दारार्यं परिग्रहार्थमादरो भूयान्बहुतरोऽभूत् । ननु दाराः कुत्रोपयुज्यन्त इत्यत्राह--धर्म्याणां दर्णादनपेतानाम् । 'धर्मपथ्यर्थन्यायादनपेते' इति यत्प्रत्ययः । क्रियामाणानामिज्यादीनां सत्यः पतिब्रताः पत्नयः सप्तत्न्यः । 'पत्युर्नो यज्ञसंयोगे' इति ङीप् । नकारश्च । मूलकारणं खलु ॥ 6.13 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -451,7 +451,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-त्वदिति । वयं त्वया सम्भावितं सत्कृतं त्वत्संभावितमात्मानमात्मस्वरूपं बह्वधिकं यथा तथा मन्यामहे । तथाहि । उत्तमादरः सत्पुरुषकर्तृकः सत्कारः स्वगृणेषु विषये प्रायेण भूम्ना प्रत्ययं विश्वासमाधत्ते जनयति । सर्वस्यापि महाजनपरिग्रह एव पूज्यताहेतुरित्यर्थः ॥ 6.20 ॥
+त्वदिति । वयं त्वया सम्भावितं सत्कृतं त्वत्संभावितमात्मानमात्मस्वरूपं बह्वधिकं यथा तथा मन्यामहे । तथाहि । उत्तमादरः सप्तुरुषकर्तृकः सत्कारः स्वगृणेषु विषये प्रायेण भूम्ना प्रत्ययं विश्वासमाधत्ते जनयति । सर्वस्यापि महाजनपरिग्रह एव पूज्यताहेतुरित्यर्थः ॥ 6.20 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -655,7 +655,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-तामिति । अस्मदर्थेऽस्मत्प्रयोजने निमित्ते सति युष्माभिस्तां पार्वती हिमालयो हिमवान्याचितव्यः । याचेर्दुहादित्वादप्रधाने कर्मणि तव्यप्रत्ययः । आवश्यकं चैतदित्यह-सिद्भिः सत्पुरुषैरनुष्ठिताः संघटिताः संबन्धाः यौनादयो विक्रियायै वैकल्योत्पादनाय न कल्पन्ते न पर्याप्नुवन्ति । न समर्था इत्यर्थः । अलमर्थयोगाच्चतुर्थी ॥ 6.29 ॥
+तामिति । अस्मदर्थेऽस्मत्प्रयोजने निमित्ते सति युष्माभिस्तां पार्वती हिमालयो हिमवान्याचितव्यः । याचेर्दुहादित्वादप्रधाने कर्मणि तव्यप्रत्ययः । आवश्यकं चैतदित्यह-सिद्भिः सप्तुरुषैरनुष्ठिताः संघटिताः संबन्धाः यौनादयो विक्रियायै वैकल्योत्पादनाय न कल्पन्ते न पर्याप्नुवन्ति । न समर्था इत्यर्थः । अलमर्थयोगाच्चतुर्थी ॥ 6.29 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
