--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/08.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/08.md
@@ -560,14 +560,14 @@ title = "०८"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पद्मनाभवलयाऽङ्किताश्मसु(1) प्राप्तवत्सवमृतविप्रुषो नवाः ।  
-(2)मन्दरस्य कटकेषु चावसत्पार्वतीवदनपद्मषट्पदः ॥ 8.23 ॥  
+(2)मन्दरस्य कटकेषु चावसप्तार्वतीवदनपद्मषट्पदः ॥ 8.23 ॥  
 {1.चरण.2.मान्दरेषु.}  
 </details>
 
 <details><summary>मूलम्</summary>
 
 पद्मनाभवलयाऽङ्किताश्मसु(1) प्राप्तवत्सवमृतविप्रुषो नवाः ।  
-(2)मन्दरस्य कटकेषु चावसत्पार्वतीवदनपद्मषट्पदः ॥ 8.23 ॥  
+(2)मन्दरस्य कटकेषु चावसप्तार्वतीवदनपद्मषट्पदः ॥ 8.23 ॥  
 {1.चरण.2.मान्दरेषु.}  
 </details>
 
@@ -1745,21 +1745,21 @@ title = "०८"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-पाकभिन्न (3)शरकाण्डगौरयोरुल्लसत्प्र(4) कृतिजप्रसादयोः ।  
+पाकभिन्न (3)शरकाण्डगौरयोरुल्लसप्त्र(4) कृतिजप्रसादयोः ।  
 रोहतीव तव गण्डलेखयोश्चन्द्रबिन्बनिहिताक्षि ! चन्द्रिका ॥ 8.74 ॥  
 {3.पाण्डु.4.प्रतिकृतिप्रसन्नयोः,प्रतिकृतिः प्रदीप्तयोः.}  
 </details>
 
 <details><summary>मूलम्</summary>
 
-पाकभिन्न (3)शरकाण्डगौरयोरुल्लसत्प्र(4) कृतिजप्रसादयोः ।  
+पाकभिन्न (3)शरकाण्डगौरयोरुल्लसप्त्र(4) कृतिजप्रसादयोः ।  
 रोहतीव तव गण्डलेखयोश्चन्द्रबिन्बनिहिताक्षि ! चन्द्रिका ॥ 8.74 ॥  
 {3.पाण्डु.4.प्रतिकृतिप्रसन्नयोः,प्रतिकृतिः प्रदीप्तयोः.}  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-हे चन्द्रबिन्बनिहिताक्षि ! पाकभिन्नशरकाण्डगौरयोः उल्लसत्प्रकृतिजप्रसादयोः तव गण्डलेखयोः चन्द्रिका उपरि रोहति इव ।  
+हे चन्द्रबिन्बनिहिताक्षि ! पाकभिन्नशरकाण्डगौरयोः उल्लसप्त्रकृतिजप्रसादयोः तव गण्डलेखयोः चन्द्रिका उपरि रोहति इव ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
