--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/13.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/13.md
@@ -1136,7 +1136,7 @@ title = "१३"
 
 <details><summary>सीतारामः</summary>
 
-करालेति । चमूस्वनैः सेनाघोषैः करालानि वाचालानि च मुखानि प्रारम्भाः । 'मुखं निःसरणे वक्रे प्रारम्भोपाययोरपि' इति मेदिनी । तथा ध्वस्तं रजोव्याप्तमम्बरं यासाम् । तथा रजस्वला रजोयुक्ता दिशो वीक्ष्य परितो गहनैः सघनैः रजोन्धकारैः कर्तृभिः । असौ दिनेश्वरः सूर्यः कुतोऽपि कुत्रापि तिरोबभूवे तिरोगमितः । अन्तर्हित इत्यर्थः । 'भूङ्गतौ' इत्यतो लिट् । 'भू प्राप्तौ' इत्यतो वा । वीक्ष्येवेति गम्योत्प्रेक्षा । अथ द्वितीयपक्षे-रजस्वला आर्तववतीः । अत एव कराला भीषणा वाचां वाणीमलान्यगृह्णान्ति मुखानि यासाम् । ततो विशेषणसमासः । मौनव्रतधारिणीरित्यर्थः । तथा ध्वस्ताम्बराः स्त्रस्तशाटिकाः । नग्ना इत्यर्थः । एवं भूता चमूर्योषितः । 'चमूः सेनाविशेषे च सेनामात्रे च योषिति' । इति मेदिनी । वीक्ष्य रजस्यार्तवविषयेऽन्धकारोऽन्धवत्कारः कृतिः । क्रिया इति यावत् । भावे घ़ञ् । आर्तवमपत्रपद्भिरित्यर्थः, रजस्वलादर्शननिषेघात् । गहनैर्गहनमनोभिः सद्भिरित्यर्थः । दिनेश्वरः कश्चित्पुरुषः कुतोऽपि कुत्रापि तिरोभूयते, कश्चिदसत्पुरुषो रजस्वलां पश्यन्नपि सद्भिः करुणया पटादिभिस्तिरोधीयते तद्वदित्यर्थः ॥ 14.48 ॥  
+करालेति । चमूस्वनैः सेनाघोषैः करालानि वाचालानि च मुखानि प्रारम्भाः । 'मुखं निःसरणे वक्रे प्रारम्भोपाययोरपि' इति मेदिनी । तथा ध्वस्तं रजोव्याप्तमम्बरं यासाम् । तथा रजस्वला रजोयुक्ता दिशो वीक्ष्य परितो गहनैः सघनैः रजोन्धकारैः कर्तृभिः । असौ दिनेश्वरः सूर्यः कुतोऽपि कुत्रापि तिरोबभूवे तिरोगमितः । अन्तर्हित इत्यर्थः । 'भूङ्गतौ' इत्यतो लिट् । 'भू प्राप्तौ' इत्यतो वा । वीक्ष्येवेति गम्योत्प्रेक्षा । अथ द्वितीयपक्षे-रजस्वला आर्तववतीः । अत एव कराला भीषणा वाचां वाणीमलान्यगृह्णान्ति मुखानि यासाम् । ततो विशेषणसमासः । मौनव्रतधारिणीरित्यर्थः । तथा ध्वस्ताम्बराः स्त्रस्तशाटिकाः । नग्ना इत्यर्थः । एवं भूता चमूर्योषितः । 'चमूः सेनाविशेषे च सेनामात्रे च योषिति' । इति मेदिनी । वीक्ष्य रजस्यार्तवविषयेऽन्धकारोऽन्धवत्कारः कृतिः । क्रिया इति यावत् । भावे घ़ञ् । आर्तवमपत्रपद्भिरित्यर्थः, रजस्वलादर्शननिषेघात् । गहनैर्गहनमनोभिः सद्भिरित्यर्थः । दिनेश्वरः कश्चित्पुरुषः कुतोऽपि कुत्रापि तिरोभूयते, कश्चिदसप्तुरुषो रजस्वलां पश्यन्नपि सद्भिः करुणया पटादिभिस्तिरोधीयते तद्वदित्यर्थः ॥ 14.48 ॥  
 </details>
 
 
