--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/mUlam/06.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/mUlam/06.md
@@ -41,7 +41,7 @@ unicode_script: devanagari
 स्त्री पुमानित्यनास्थैषा वृत्तं हि महितं सताम् ॥ ६।१२॥
 
 तद्दर्शनादभूच्छम्भोर्भूयान्दारार्थमादरः ।  
-क्रियाणां खलु धर्म्याणां सत्पत्न्यो मूलसाधनम् ॥ ६।१३॥
+क्रियाणां खलु धर्म्याणां सप्तत्न्यो मूलसाधनम् ॥ ६।१३॥
 
 धर्मेणापि पदं शर्वे कारिते पार्वतीं प्रति ।  
 पूर्वापराधभीतस्य कामस्योच्छ्वासितं मनः ॥ ६।१४॥
